Closed
Bug 1700595
Opened 4 years ago
Closed 4 years ago
Undefined symbol mozilla::dom::SetGamepadLightIndicatorColor
Categories
(Firefox Build System :: General, defect)
Firefox Build System
General
Tracking
(firefox-esr78 unaffected, firefox87 unaffected, firefox88 unaffected, firefox89 fixed)
RESOLVED
FIXED
89 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox87 | --- | unaffected |
firefox88 | --- | unaffected |
firefox89 | --- | fixed |
People
(Reporter: petr.sumbera, Assigned: petr.sumbera)
References
(Regression)
Details
(Keywords: regression)
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:86.0) Gecko/20100101 Firefox/86.0
Steps to reproduce:
Solaris build failed with:
35:23.36 Undefined first referenced
35:23.36 symbol in file
35:23.38 mozilla::dom::SetGamepadLightIndicatorColor(mozilla::Tainted<mozilla::dom::GamepadHandle> const&, mozilla::Tainted<unsigned int> const&, unsigned char const&, unsigned char const&, unsigned char const&) ../../../dom/gamepad/Unified_cpp_dom_gamepad0.o (symbol scope specifies local binding)
35:23.38 ld: fatal: symbol referencing errors
35:23.38 collect2: error: ld returned 1 exit status
35:23.39 gmake[4]: *** [/builds/psumbera/mozilla-central-build/config/rules.mk:545: libxul.so] Error 1
35:23.39 gmake[3]: *** [/builds/psumbera/mozilla-central-build/config/recurse.mk:72: toolkit/library/build/target] Error 2
35:23.39 gmake[2]: *** [/builds/psumbera/mozilla-central-build/config/recurse.mk:34: compile] Error 2
35:23.39 gmake[1]: *** [/builds/psumbera/mozilla-central-build/config/rules.mk:355: default] Error 2
35:23.39 gmake: *** [client.mk:65: build] Error 2
The first bad revision is:
changeset: 572720:1fd580d39fcf
user: Tom Ritter <tom@mozilla.com>
date: Tue Mar 23 11:26:30 2021 -0700
description:
Bug 1610570: Add a 'NoTaint=allvalid' attribute as well, and cut Gamepad over to it r=cmartin
Depends on D108247
Differential Revision: https://phabricator.services.mozilla.com/D108248
Assignee | ||
Updated•4 years ago
|
Keywords: regression
Regressed by: 1610570
Updated•4 years ago
|
Has Regression Range: --- → yes
Comment 1•4 years ago
|
||
The Bugbug bot thinks this bug should belong to the 'Firefox Build System::General' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.
Component: Untriaged → General
Product: Firefox → Firefox Build System
Comment 2•4 years ago
|
||
Set release status flags based on info from the regressing bug 1610570
status-firefox87:
--- → unaffected
status-firefox88:
--- → unaffected
status-firefox89:
--- → affected
status-firefox-esr78:
--- → unaffected
Assignee | ||
Comment 3•4 years ago
|
||
Updated•4 years ago
|
Assignee: nobody → petr.sumbera
Pushed by tritter@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/19cb9eae0887
Unbreak dom/gamepad/fallback/FallbackGamepad.cpp after Bug 1610570 r=tjr
Comment 5•4 years ago
|
||
bugherder |
Status: UNCONFIRMED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
You need to log in
before you can comment on or make changes to this bug.
Description
•