Bug 1700595 - Unbreak dom/gamepad/fallback/FallbackGamepad.cpp after Bug 1610570 r=tjr

Differential Revision: https://phabricator.services.mozilla.com/D109658